fixed overflow issue and images not displaying when using overflow-x in body tag

--- a/eCommerce.Web/Content/templates/fashi/css/style.css
+++ b/eCommerce.Web/Content/templates/fashi/css/style.css
@@ -43,6 +43,10 @@ body {
 	font-family: "Karla", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
+	
+}
+
+.wrapper {
 	overflow-x: hidden;
 }
 
